[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["macros", "postgres", "runtime-actix-native-tls"] }
