[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
dotenv = "0.15.0"
google-oauth = "1.1.0"
reqwest = "0.11.18"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["macros", "postgres", "runtime-actix-native-tls"] }
